@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 16-12-2005 changed: the video stacked-cd selector dialog will choose the first file after 60 seconds
+ - 16-12-2005 fixed: IMDB lookup of plotsummary when a "Title?tt#######" url is in the nfo file
  - 15-12-2005 fixed: [ 1380351 ] Autoshutdown if slideshow screensaver is activated
  - 15-12-2005 fixed: Progress dialog could stay on screen after a calling up the shoutcast list via the webserver.
  - 15-12-2005 added: XBMC.PlayerControl(BigSkipForward), BigSkipBackward, SmallSkipForward and SmallSkipBackward built in functions.
